# simple-tools

./: .env.template  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/commands/: archived-ep.md  create-ep.md  file-size-check.md  pre-commit.md
docs/: EP-00001_20260504_yt-mp3.md  EP-00002_20260505_play-music.md  EP-00003_20260505_prompt-optimizer.md  SPECS.md
docs/archived/: EP-00001_20260504_yt-mp3.md  EP-00002_20260505_play-music.md
src/simple_tools/: cli.py
src/simple_tools/tools/play_music/: __init__.py  cli.py  player.py  visualizer.py
src/simple_tools/tools/prompt_optimizer/: __init__.py  cli.py  optimizer.py
src/simple_tools/tools/yt_mp3/: __init__.py  cli.py  downloader.py
tests/tools/play_music/: test_cli.py  test_player.py  test_visualizer.py
tests/tools/prompt_optimizer/: test_cli.py  test_optimizer.py
tests/tools/yt_mp3/: test_cli.py  test_downloader.py
