[project]
name = "simple-tools"
version = "0.1.0"
description = "A collection of small Python CLIs exposed as subcommands under a single entrypoint."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "inotives", email = "inotives@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "yt-dlp>=2024.8.6",
]

[project.scripts]
simple-tools = "simple_tools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_tools"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["yt_dlp", "yt_dlp.utils"]
ignore_missing_imports = true
